@@ -496,6 +496,8 @@ operate on black box fields:
 
 \fun{const struct bb_field *}{get_F2xq_field}{void **pE, GEN T}
 
+\fun{const struct bb_field *}{get_nf_field}{void **pE, GEN nf}
+
 \section{Black box algebra}
 
 A black box algebra is defined by a \tet{bb_algebra} struct, describing methods
