@@ -1907,6 +1907,7 @@ int     ZC_prdvd(GEN nf, GEN x, GEN P);
 GEN     algtobasis(GEN nf, GEN x);
 GEN     basistoalg(GEN nf, GEN x);
 GEN     ei_multable(GEN nf, long i);
+const struct bb_field *get_nf_field(void **E, GEN nf);
 GEN     gpnfvalrem(GEN nf, GEN x, GEN pr, GEN *py);
 GEN     ideallist(GEN nf,long bound);
 GEN     ideallist0(GEN nf,long bound, long flag);
@@ -1929,6 +1930,10 @@ GEN     nfdivrem(GEN nf, GEN a, GEN b);
 GEN     nfembed(GEN nf, GEN x, long k);
 GEN     nfinv(GEN nf, GEN x);
 GEN     nfinvmodideal(GEN nf, GEN x, GEN ideal);
+GEN     nfM_det(GEN nf, GEN M);
+GEN     nfM_inv(GEN nf, GEN M);
+GEN     nfM_mul(GEN nf, GEN A, GEN B);
+GEN     nfM_nfC_mul(GEN nf, GEN A, GEN B);
 GEN     nfmod(GEN nf, GEN a, GEN b);
 GEN     nfmul(GEN nf,GEN x,GEN y);
 GEN     nfmuli(GEN nf,GEN x,GEN y);
