@@ -27,6 +27,8 @@ Done for version 2.8.1 (released ??/??/2016):
    15- [libpari] rnfcomplete, rnf_build_nfabs, bnf_build_cycgen,
        bnf_build_units, bnf_build_matalpha
    16- [libpari] rnf_zkabs
+   17- [libpari] get_nf_field (black box field arithemtic over a number
+       field nf), nfM_det, nfM_inv, nfM_mul, nfM_nfC_mul
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
